// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityRectangleComponent should hide title when showTitle false 1`] = `
<div
  id="root2"
  ngx-d3timeline-activity-rectangle=""
>
  
  <g
    class="activity-rectangle Driving draggable"
    transform="translate(50,0)"
  >
    <rect
      height="80"
      stroke-width="1"
      width="50"
    />
    
  </g>
</div>
`;

exports[`ActivityRectangleComponent should not render if activityRectangle is null 1`] = `
<div
  id="root0"
  ngx-d3timeline-activity-rectangle=""
>
  
</div>
`;

exports[`ActivityRectangleComponent should render correctly 1`] = `
<div
  id="root1"
  ngx-d3timeline-activity-rectangle=""
>
  
  <g
    class="activity-rectangle Driving draggable"
    transform="translate(50,0)"
  >
    <rect
      height="80"
      stroke-width="1"
      width="50"
    />
    
    <g
      ngx-d3timeline-activity-content=""
    >
      <foreignobject
        class="activity-content"
      />
    </g>
  </g>
</div>
`;
